fix::bug: change jpeg to png

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
+    <head
+      prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#"
+    ></head>
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta
       name="description"
@@ -30,7 +33,7 @@
       content="Click your interesting component and copy the code."
     />
     <meta property="og:image" content="%PUBLIC_URL%/OGP.jpg" />
-    <link rel="icon" type="iamge/png" href="%PUBLIC_URL%/logo.jpg" />
+    <link rel="icon" type="iamge/png" href="%PUBLIC_URL%/logo.png" />
     <title>UI Components</title>
   </head>
   <body>
