fix::bug: fix path for ogp && ogp type

--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,23 @@
       content="Click your interesting component and copy the code."
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/OGP.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://www.ui-components.com/OGP.jpg"
+    />
     <meta
       name="twitter:description"
       content="Click your interesting component and copy the code."
     />
     <meta property="og:site_name" content="UI Components" />
-    <meta property="og:type" content="UI Components" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:title" content="UI Components" />
     <meta
       property="og:description"
       content="Click your interesting component and copy the code."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/OGP.jpg" />
+    <meta property="og:image" content="https://www.ui-components.com/OGP.jpg" />
     <link rel="icon" type="iamge/png" href="%PUBLIC_URL%/logo.png" />
     <title>UI Components</title>
   </head>
